--- a/index.html
+++ b/index.html
@@ -4,46 +4,50 @@
 		<title>UNES - Página principal</title>
 		<meta charset="utf-8">
 	</head>
-
-	<body background="imagens/fundo.png">
-
+	<body background="imagens/fundo.png" >
 		<table border="0" width="900" align="center">
+			<tr>
+				<td height="89"><img src="imagens/logo.png"></td>
 
-		<tr>
-			<td height="89"><img src="imagens/logo.png"></td>
-			<td align="right">
-				<a href=""> Home </a> |
-				 <a href="quem-somos.html">Quem somos</a>  |
-				 <a href="contato.html">contato</a>  |
-			</td>	
-		</tr>
+				<td align="right">
+					<a href="">Home</a>|
+					<a href="quem-somos.html">Quem somos</a>|
+					<a href="contatos.html">Contato</a>|
+				</td>
 
-		<tr>
-			<td colspan="2">
-				<img src="imagens/capa.png">
-			</td>
-		</tr>
+			</tr>
 
-		<tr>
-			<td colspan="2">
-				<h2>Sobre a Universidade</h2>
-				<p>Lorem <strong>dummy text</strong>  of the <em>printing </em> and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+			<tr>
+				<td colspan="2"><img src="imagens/capa.png"></td>
+			</tr>
 
-				<p>Lorem <strong>dummy text</strong>  of the <em>printing </em> and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+			<tr>
+				<td colspan="2">
 
+				 <h2>Sobre a Universidade</h2>
 
-			</td>
-		</tr>
+				</td>
 
-		<tr>
-			<td colspan="2">
-				<h4 align="center">Todos os direitos reservados</h4>
+			</tr>
 
-			</td>
-		</tr>
+			<tr>
+				<td colspan="2">
 
+					<p> <strong>Lorem Ipsum</strong>  é simplesmente um texto fictício da indústria de impressão e composição tipográfica. Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor desconhecido pegou uma prova de tipos e a misturou para fazer um livro de espécimes de tipos. Ela sobreviveu não apenas a cinco séculos, mas também ao salto para a composição tipográfica eletrônica, permanecendo essencialmente inalterada. Foi popularizado na década de 1960 com o lançamento de folhas Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração e</p>
+					<p>Lorem Ipsum é simplesmente um texto fictício da indústria de impressão e composição tipográfica. Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor desconhecido pegou uma prova de tipos e a misturou para fazer um livro de espécimes de tipos. Ela sobreviveu não apenas a cinco séculos, mas também ao salto para a composição tipográfica eletrônica, permanecendo essencialmente inalterada. Foi popularizado na década de 1960 com o lançamento de folhas Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração e</p>
+					
+				</td>
+			</tr>
 
+			<tr>
+				<td colspan="2" align="center" > <h4><b>Toso os direitos reservados</b></h4>  </td>
+			</tr>
+			
+
+			
 		</table>
+		
+		
 	</body>
 
 </html>
