exercício de frame 001

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	</head>
 	<body background="imagens/fundo.png" >
 		<table border="0" width="900" align="center">
-			<tr>
-				<td height="89"><img src="imagens/logo.png"></td>
+			<tr >
+				<td height="89"><img src="imagens/logo-uni.png" width="150"></td>
 
 				<td align="right">
 					<a href="">Home</a>|
