--- a/quem-somos.html
+++ b/quem-somos.html
@@ -7,7 +7,7 @@
 
 	<table border="0" width="900" align="center">
 		<tr>
-			<td height="89"> <img src="imagens/logo.png"></td>
+			<td height="89"> <img src="imagens/logo-uni.png" width="150"></td>
 			<td align="center">
 				<a href="index.html">Home</a>|
 				<a href="">Quem somos</a>|
