--- a/contatos.html
+++ b/contatos.html
@@ -7,7 +7,7 @@
 
 	<table border="0" width="900" align="center">
 		<tr>
-			<td height="89"> <img src="imagens/logo.png"></td>
+			<td height="89"> <img src="imagens/logo-uni.png" width="150"></td>
 			<td align="center">
 				<a href="index.html">Home</a>|
 				<a href="quem-somos.html">Quem somos</a>|
@@ -17,7 +17,13 @@
 		<tr>
 			<td colspan="2">
 				<h2>Entre em contato</h2>
+			
 			</td>
+			<tr>
+				<td>
+					 <img src="imagens/Captura de Tela (18).png" width="150"  alt="">
+				</td>
+			</tr>
 		</tr>
 		<tr>
 			<td>
