site-universidade Lenilson final

--- a/contatos.html
+++ b/contatos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-	<title>Quem somos</title>
+	<title>Quem-somos</title>
 </head>
 <body background="imagens/fundo2.png">
 
